Revision history for Perl extension Wx.

0.69

0.68  Sat Mar 10 21:45:26 CET 2007
	- Added wxSystemOptions (thanks to Mark Dootson).
	- Fix a thread-related crash.

0.67  Sat Dec 16 19:36:37 CET 2006
	- Try to handle gracefully the case when Alien::wxWidgets is missing,
	  restoring the 0.49_05 behaviour.

0.66  Fri Dec 15 22:47:54 CET 2006
	- wxWidgets 2.8.0 compatibility.

0.65  Sun Dec  3 16:49:02 CET 2006
	- Windows compilation fixes.

0.64  Sun Nov 26 18:32:03 CET 2006
	- Removed support for wxWidgets 2.7.0 and 2.7.1.
        - Added Wx::GridCellAutoWrapStringRenderer,
	  Wx::GridCellAutoWrapStringEditor, Wx::GridCellEnumRenderer,
	  Wx::GridCellEnumEditor, Wx::GridCellDateTimeRenderer
	  (thanks to Mark Dootson).
	- Added wxRichTextFormattingDialog.

0.63  Wed Nov 15 21:40:28 CET 2006
	- Fix failing tests under Mac.

0.62  Mon Nov 13 23:16:41 CET 2006
	- Fix Windows compilation.
	- Fix Mac OS X build.

0.61  Sun Nov 12 18:33:41 CET 2006
	- Added Advanced User Interface (AUI) (2.7).
	- Wrapped more wxRichTextCtrl support classes (2.7).

0.60  Sat Nov 11 16:48:57 CET 2006
	- Added wxRichTextCtrl and some related classes (2.7).
	- Removed support for wxWidgets 2.4. Supports 2.5.3 and above.
	- Added wxSimpleHtmlListBox, wxColourPickerCtrl, wxFontPickerCtrl,
	  wxFilePickerCtrl, wxDirPickerCtrl, wxAboutDialog (2.7).
	- Resolved memory leak with classes derived from Wx::PlEvent and
	  Wx::PlCommandEvent.

0.59  Fri Oct 20 22:05:45 CEST 2006
	- Fix packaging error in 0.58.

0.58  Thu Oct 19 21:54:04 CEST 2006
	- Added wxVScrolledWindow, wxVListBox, wxHtmlListBox.
	- Support wxWidgets RTL API (2.7).
	- Fix various bugs in wxStreams <=> Perl filehandles
	  interoperability.

0.57  Sun Aug 27 17:25:18 CEST 2006
	- Added wxHtmlDCRenderer (thanks to Mark Dootson).
	- Made the XS++ and overload preprocessors installable,
	  to be used by extensions.
	- Removed the demo and some samples, replaced by
	  Wx::Demo (a separate CPAN distribution).
